Refactor preprocessing code to pyspark

--- a/DataPreprocessing/DataPreprocessing.ipynb
+++ b/DataPreprocessing/DataPreprocessing.ipynb
@@ -2,24 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'DataPreprocessing' from 'f:\\\\Fourth Year 2nd term\\\\Big Data\\\\Big-Data-Project\\\\DataPreprocessing\\\\DataPreprocessing.py'>"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import DataPreprocessing\n",
-    "from DataPreprocessing import *\n",
-    "import importlib; importlib.reload(DataPreprocessing)"
+    "import pyspark\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark import SparkContext\n",
+    "import DataPreprocessing\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spark session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = SparkContext(master='local')\n",
+    "spark=SparkSession.builder.appName('DataPreprocessing').getOrCreate()"
    ]
   },
   {
@@ -32,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,14 +57,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+------------+----------------+----------------+-----+\n",
+      "|Rating|Rating Count|Minimum Installs|Maximum Installs|Price|\n",
+      "+------+------------+----------------+----------------+-----+\n",
+      "|   0.0|           0|             100|             124|  0.0|\n",
+      "|   0.0|           0|             100|             103|  0.0|\n",
+      "|   2.7|       11211|          500000|          593625|  0.0|\n",
+      "|   0.0|           0|            1000|            1178|  0.0|\n",
+      "|   4.2|          13|             500|             731|  0.0|\n",
+      "+------+------------+----------------+----------------+-----+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# useless_cols = ['Scraped Time', 'Privacy Policy', 'Currency', 'Editors Choice']\n",
-    "df = DataPreprocessing.read_data(kind='all')\n",
-    "\n",
-    "# df.head()"
+    "df = DataPreprocessing.read_data(spark,kind='val', features='Numerical')\n",
+    "df.show(5)"
    ]
   },
   {
@@ -69,15 +94,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of rows: 2312944, Number of columns: 24\n",
-      "Available Features: ['App Name', 'App Id', 'Category', 'Rating', 'Rating Count', 'Installs', 'Minimum Installs', 'Maximum Installs', 'Free', 'Price', 'Currency', 'Size', 'Minimum Android', 'Developer Id', 'Developer Website', 'Developer Email', 'Released', 'Last Updated', 'Content Rating', 'Privacy Policy', 'Ad Supported', 'In App Purchases', 'Editors Choice', 'Scraped Time']\n"
+      "Number of rows: 462589, Number of columns: 5\n",
+      "Available features: ['Rating', 'Rating Count', 'Minimum Installs', 'Maximum Installs', 'Price']\n",
+      "+-------+------------------+------------------+------------------+------------------+------------------+\n",
+      "|summary|            Rating|      Rating Count|  Minimum Installs|  Maximum Installs|             Price|\n",
+      "+-------+------------------+------------------+------------------+------------------+------------------+\n",
+      "|  count|            457947|            457953|            462560|            462582|            462583|\n",
+      "|   mean|  2.20660840667321|2761.5502551571885|144657.87451790037|244263.03848182593|10.918122856241133|\n",
+      "| stddev|2.1069718936561266|178228.84234296193| 5556798.220447107|  7697412.10194939| 7351.487590151274|\n",
+      "|    min|               0.0|                 0|                 0|                 0|               0.0|\n",
+      "|    max|               5.0|          89177097|        1000000000|        2063336389|         5000000.0|\n",
+      "+-------+------------------+------------------+------------------+------------------+------------------+\n",
+      "\n"
      ]
     }
    ],
@@ -95,22 +130,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Number of rows : 1387766\n",
-      "Number of rows with missing values: 490315\n",
-      "Number of rows after dropping: 897451\n"
+      "Total Number of rows : 462589\n",
+      "Number of rows with missing values: 6\n",
+      "Number of rows after dropping: 457942\n"
      ]
     }
    ],
    "source": [
-    "df_copy = df.copy()\n",
-    "df_copy= DataPreprocessing.missing_values(df_copy)"
+    "df_copy= DataPreprocessing.missing_values(df)"
    ]
   },
   {
@@ -123,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
