Replace delimiters if needed

--- a/DataPreprocessing/DataPreprocessing.ipynb
+++ b/DataPreprocessing/DataPreprocessing.ipynb
@@ -9,7 +9,16 @@
     "import pyspark\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark import SparkContext\n",
-    "import DataPreprocessing\n"
+    "import DataPreprocessing\n",
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "# os.environ['PYSPARK_PYTHON'] = sys.executable\n",
+    "# os.environ['PYSPARK_DRIVER_PYTHON'] = sys.executable\n",
+    "# os.environ['PYSPARK_PYTHON']= 'C:\\\\Users\\\\Dell\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310'\n",
+    "# os.environ['PYSPARK_DRIVER_PYTHON']= 'C:\\\\Users\\\\Dell\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310\\\\python.exe'\n",
+    "# os.environ['SPARK_HOME'] = 'F:\\\\spark-3.4.0-bin-hadoop3\\\\spark-3.4.0-bin-hadoop3'\n",
+    "# os.environ['HADOOP_HOME'] = 'F:\\\\spark-3.4.0-bin-hadoop3\\\\spark-3.4.0-bin-hadoop3\\\\hadoop'\n"
    ]
   },
   {
@@ -27,7 +36,7 @@
    "outputs": [],
    "source": [
     "sc = SparkContext(master='local')\n",
-    "spark=SparkSession.builder.appName('DataPreprocessing').getOrCreate()"
+    "spark=SparkSession.builder.appName('DataPreprocessing').getOrCreate()\n"
    ]
   },
   {
@@ -40,11 +49,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataPreprocessing.split_data()"
+    "# DataPreprocessing.split_data()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Replace delimiters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DataPreprocessing.replace_delimiters(delimiter='|')\n",
+    "# DataPreprocessing.replace_delimiters(delimiter='|',kind='train')\n",
+    "# DataPreprocessing.replace_delimiters(delimiter='|',kind='val')\n",
+    "# DataPreprocessing.replace_delimiters(delimiter='|',kind='test')"
    ]
   },
   {
