Min #installs per category using mapreduce -check-

--- a/DataExploration/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
+++ b/DataExploration/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,20 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Q ParentConnection,com.AequitasSolutions.ParentPortal,Education,3.1,71.0,10000+,10000.0,36999,True,0.0,USD,24M,4.1 and up,Aequitas Solutions  Inc.,https://www.myaequitas.com,info@myaequitas.com,Jul 3  2019,Jun 11  2020,Everyone,https://www.myaequitas.com/privacy.aspx,True,True,True,2021-06-15 23:58:57',\n",
-       " 'Chef Monkey Pet - Adopt me,chef.monkeypet.co,Adventure,2.4,14.0,500+,500.0,614,True,0.0,USD,40M,4.1 and up,ALPHAEGO,,anasseb63@gmail.com,Apr 6  2021,Apr 06  2021,Everyone,,True,True,True,2021-06-16 06:39:57',\n",
-       " 'SmartConnect Apps,com.logictree.smartconnectapps,Productivity,0.0,0.0,100+,100.0,107,True,0.0,USD,10M,4.1 and up,LogicTree IT Solutions Inc,http://logictreeit.com,logictreeitsolutions@gmail.com,Sep 15  2017,Aug 19  2019,Everyone,https://www.smartconnectapps.com/OP/smartconnectappscom/terms.html,True,True,True,2021-06-16 12:18:18',\n",
-       " 'Team Formula Pro (2021),uk.co.teambobk.f1calendar,Sports,4.7,86.0,1000+,1000.0,1004,True,3.49,USD,9.5M,5.0 and up,TeamBobK,http://www.teambobk.co.uk,info@teambobk.co.uk,Aug 16  2010,May 16  2021,Teen,,True,True,True,2021-06-16 09:38:59',\n",
-       " 'tontest OPIc SDS 채점,com.tonenglish.sds.tontest.opic,Education,0.0,0.0,100+,100.0,289,True,0.0,USD,1.7M,4.0 and up,tonenglish,http://www.tonenglish.co.kr,info@tonenglish.co.kr,Mar 24  2015,Feb 15  2016,Everyone,http://www.tonenglish.co.kr/member/privercy2.php,True,True,True,2021-06-16 04:28:35']"
+       "['Q ParentConnection,com.AequitasSolutions.ParentPortal,Education,3.1,71.0,10000+,10000,36999,True,0.0,USD,24M,4.1 and up,Aequitas Solutions  Inc.,https://www.myaequitas.com,info@myaequitas.com,Jul 3  2019,Jun 11  2020,Everyone,https://www.myaequitas.com/privacy.aspx,False,False,False,2021-06-15 23:58:57',\n",
+       " 'Chef Monkey Pet - Adopt me,chef.monkeypet.co,Adventure,2.4,14.0,500+,500,614,True,0.0,USD,40M,4.1 and up,ALPHAEGO,,anasseb63@gmail.com,Apr 6  2021,Apr 06  2021,Everyone,,True,False,False,2021-06-16 06:39:57',\n",
+       " 'SmartConnect Apps,com.logictree.smartconnectapps,Productivity,0.0,0.0,100+,100,107,True,0.0,USD,10M,4.1 and up,LogicTree IT Solutions Inc,http://logictreeit.com,logictreeitsolutions@gmail.com,Sep 15  2017,Aug 19  2019,Everyone,https://www.smartconnectapps.com/OP/smartconnectappscom/terms.html,True,False,False,2021-06-16 12:18:18',\n",
+       " 'Team Formula Pro (2021),uk.co.teambobk.f1calendar,Sports,4.7,86.0,1000+,1000,1004,False,3.49,USD,9.5M,5.0 and up,TeamBobK,http://www.teambobk.co.uk,info@teambobk.co.uk,Aug 16  2010,May 16  2021,Teen,,False,False,False,2021-06-16 09:38:59',\n",
+       " 'tontest OPIc SDS 채점,com.tonenglish.sds.tontest.opic,Education,0.0,0.0,100+,100,289,True,0.0,USD,1.7M,4.0 and up,tonenglish,http://www.tonenglish.co.kr,info@tonenglish.co.kr,Mar 24  2015,Feb 15  2016,Everyone,http://www.tonenglish.co.kr/member/privercy2.php,False,False,False,2021-06-16 04:28:35']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,6 +65,7 @@
     "rdd= sc.textFile('../../Dataset/val-RDD.csv')\n",
     "header= rdd.first()\n",
     "rdd= rdd.filter(lambda x: x!=header)\n",
+    "\n",
     "rdd.take(5)"
    ]
   },
@@ -80,7 +81,17 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Free apps: 453626\n",
+      "Number of Paid apps: 8963\n",
+      "Total Number of apps: 462589\n"
+     ]
+    }
+   ],
    "source": [
     "total_apps= rdd.count()\n",
     "free_apps= rdd.filter(lambda x: x.split(',')[8] == 'True').count()\n",
@@ -93,21 +104,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Free', 10000.0),\n",
+       " ('Free', 500.0),\n",
+       " ('Free', 100.0),\n",
+       " ('Paid', 1000.0),\n",
+       " ('Free', 100.0)]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#TODO: get average of max and min installations to be the value  \n",
+    "#TODO: fix min installations column problem, leh msh rady yb2a int??? hwa float bs hatta msh byerda ygm3 rkmen float fa leh\n",
+    "\n",
     "def avg_installs(x):\n",
-    "    installations = x.split(',')[7]\n",
-    "    if x.split(',')[8] == 'True': return ('Free', installations)\n",
-    "    else:                         return ('Paid', installations)\n",
     "\n",
-    "installs_rdd = rdd.filter(lambda x:x!='')\\\n",
+    "    max_installations = (x.split(',')[7])\n",
+    "    min_installations= (x.split(',')[6])\n",
+    "    # avg= (max_installations- min_installations) /2.0\n",
+    "\n",
+    "    if x.split(',')[8] == 'True': return ('Free',min_installations)\n",
+    "    else:                         return ('Paid',min_installations)\n",
+    "\n",
+    "avg_installs_paid = rdd.filter(lambda x:x!='')\\\n",
     "                .map(avg_installs)\\\n",
-    "                .reduceByKey(lambda x, y: x + y)\\\n",
-    "                .map(lambda x: (x[0], x[1] / free_apps if x[0] == 'Free' else x[1] / paid_apps))\n",
-    "\n",
-    "installs_rdd.take(1)"
+    "                .mapValues(lambda x: float(x))\\\n",
+    "                # .reduceByKey(lambda x, y: x + y)\\\n",
+    "                # .map(lambda x: (x[0], x[1] / free_apps if x[0] == 'Free' else x[1] / paid_apps))\n",
+    "                \n",
+    "avg_installs_paid.take(5)"
    ]
   },
   {
@@ -120,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +167,7 @@
        " ('Productivity', 6290110338)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,28 +194,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Events', 12017919),\n",
+       " ('Parenting', 31798395),\n",
+       " ('Libraries & Demo', 41837747),\n",
+       " ('Comics', 64775991),\n",
+       " ('House & Home', 66617033)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# input_data \\\n",
-    "# .map(lambda row: (row[0], (row[1],row[2]))) \\\n",
-    "# .groupByKey() \\\n",
-    "# .map(lambda row: (\n",
-    "#         row[0],\n",
-    "#         sum([tup[0] for tup in list(row[1])]),\n",
-    "#         sum([tup[1] for tup in list(row[1])])\n",
-    "#     )\n",
-    "# ).collect()"
+    "#TODO: check if this analysis is important or not\n",
+    "# min installs= x[6], category= x[2]\n",
+    "min_installs_categ= rdd.filter(lambda x:x!='')\\\n",
+    "            .map(lambda x: (x.split(',')[2], x.split(',')[6]))\\\n",
+    "            .filter(lambda x: x[1].isdigit()) \\\n",
+    "            .mapValues(lambda x: int(x))\\\n",
+    "            .reduceByKey(lambda x,y: x+y)\\\n",
+    "            .sortBy(lambda x: x[1], ascending=True)\n",
+    "\n",
+    "min_installs_categ.take(5)"
    ]
   },
   {
@@ -213,6 +254,8 @@
     }
    ],
    "source": [
+    "# TODO: make the key be: developer id, developer website & developer email\n",
+    "\n",
     "developer_apps= rdd.filter(lambda x:x!='')\\\n",
     "                .map(lambda x: (x.split(',')[13], 1))\\\n",
     "                .reduceByKey(lambda x,y:(x+y))\\\n",
