--- a/DataExploration/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
+++ b/DataExploration/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
@@ -204,13 +204,13 @@
     "#   counting the number of each category, and getting the max price of each category\n",
     "#4. we map each value to a tuple of (avg price, count of each category, max price)\n",
     "#5. we map each row to a tuple of (category, (count of each category, avg price, max price))\n",
-    "#6. we sort by max price in descending order\n",
+    "#6. we sort by count of each category in descending order\n",
     "\n",
     "price = rdd.filter(lambda x: x != '') \\\n",
     "        .map(lambda x: (x.split(',')[2], x.split(',')[9])) \\\n",
     "        .mapValues(lambda x: (float(x), 0, float(x))) \\\n",
     "        .aggregateByKey((0.0, 0, 0), \n",
-    "                         lambda acc, value: (acc[0] + value[0], acc[1] + 1, max(acc[2], value[0])), \n",
+    "                         lambda acc, value: (acc[0] + value[0], acc[1] + 1, max(acc[2], value[0])), # addOp then combOp\n",
     "                         lambda acc1, acc2: (acc1[0] + acc2[0], acc1[1] + acc2[1], max(acc1[2], acc2[2]))) \\\n",
     "        .mapValues(lambda x: (x[0] / x[1], x[1], x[2])) \\\n",
     "        .map(lambda x: (x[0], ( x[1][1], x[1][0], x[1][2])))\\\n",
