Correlation between numerical features & some renaming

--- a/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
+++ b/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "rdd= sc.textFile('../Dataset/val-RDD.csv')\n",
+    "rdd= sc.textFile('../../Dataset/val-RDD.csv')\n",
     "header= rdd.first()\n",
     "rdd= rdd.filter(lambda x: x!=header)\n",
     "\n",
