Highest rated developers -without insights-

--- a/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
+++ b/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install squarify"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -11,7 +20,8 @@
     "from pyspark.conf import SparkConf\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import squarify"
    ]
   },
   {
@@ -434,8 +444,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: make the key be: developer id, developer website & developer email\n",
-    "\n",
     "developer_apps= rdd.filter(lambda x:x.split(',')[13]!='')\\\n",
     "                .map(lambda x: (x.split(',')[13], 1))\\\n",
     "                .reduceByKey(lambda x,y:(x+y))\\\n",
@@ -594,6 +602,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Highest rated developers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "developer_rates= rdd.filter(lambda x: x.split(',')[13] != '' and x.split(',')[3] != '')\\\n",
+    "        .map(lambda x: (x.split(',')[13], x.split(',')[3]))\\\n",
+    "        .mapValues(lambda x: (float(x), 1))\\\n",
+    "        .reduceByKey(lambda x,y: (x[0]+y[0], x[1]+y[1]))\\\n",
+    "        .mapValues(lambda x: x[0]/x[1])\\\n",
+    "        .sortBy(lambda x: x[1], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: Need a suitable insight for this\n",
+    "\n",
+    "dev_rates= np.array(developer_rates.collect())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### #(free/paid) apps in each category"
    ]
   },
@@ -615,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +671,6 @@
     }
    ],
    "source": [
-    "# plot a stacked bar chart of the number of free apps and paid apps in each category \n",
     "categories = [x[0] for x in categ_payment.collect()]\n",
     "free_apps = [x[1][0] for x in categ_payment.collect()]\n",
     "paid_apps = [x[1][1] for x in categ_payment.collect()]\n",
@@ -732,13 +772,16 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "### top 10 Categories that are installed\n",
-    "### Category has the highest Paid and Free Apps\n",
     "### top 5 Paid Apps based with highest ratings and Installs\n",
     "### top 5 Free Apps based with highest ratings and Installs\n",
     "### developers with highest rates\n",
-    "### top 5 cats of free and paid apps\n",
     "### top 5 cats of paid apps based on the rating"
    ]
   }
