Organize descriptive analysis notebook

--- a/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
+++ b/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
@@ -114,6 +114,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Analysis points\n",
+    "1. Avg/ Max price and count for each category\n",
+    "2. Max No. of Installs for each category\n",
+    "3. Developed apps per developer\n",
+    "4. Ratings\n",
+    "5. Highest rated Category\n",
+    "6. Highest rated developers (Need insight)\n",
+    "7. #(free/paid) apps in each category\n",
+    "8. Categories of paid apps based on the rating\n",
+    "9. How can people's categories (Everyone/Teen/Adults) affect rating and #installs?\n",
+    "10. Paid Apps based with highest ratings and Installs\n",
+    "11. Free Apps based with highest ratings and Installs"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Avg Installations/ Free-Paid Apps"
    ]
   },
@@ -171,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Avg/ Max price for each category"
+    "# Avg/ Max price and count for each category"
    ]
   },
   {
