reordering for data exploration cells

--- a/DataExploration/DataExploration.ipynb
+++ b/DataExploration/DataExploration.ipynb
@@ -17,6 +17,26 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Prepare dataset for RDD"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "DataExploration.delimiter_to_comma()\n",
+        "# DataExploration.delimiter_to_comma(file_name='train')\n",
+        "# DataExploration.delimiter_to_comma(file_name='val')\n",
+        "# DataExploration.delimiter_to_comma(file_name='test')"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Spark session"
       ]
     },
@@ -27,7 +47,7 @@
       "outputs": [],
       "source": [
         "sc = SparkContext(master='local')\n",
-        "spark=SparkSession.builder.appName('DataExploration').getOrCreate()\n"
+        "spark=SparkSession.builder.appName('DataExploration').getOrCreate()"
       ]
     },
     {
@@ -40,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -269,8 +289,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "pd_df = df.toPandas()\n",
-        "pd_df.to_csv('../Dataset/'+file_name+'.csv', index=False)"
+        "# pd_df = df.toPandas()\n",
+        "# pd_df.to_csv('../Dataset/'+file_name+'.csv', index=False)"
       ]
     },
     {
@@ -287,27 +307,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "DataExploration.split_data()"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Prepare dataset for RDD"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# DataExploration.delimiter_to_comma()\n",
-        "# DataExploration.delimiter_to_comma(file_name='train')\n",
-        "# DataExploration.delimiter_to_comma(file_name='val')\n",
-        "# DataExploration.delimiter_to_comma(file_name='test')"
+        "# DataExploration.split_data()"
       ]
     }
   ],
