Convert app size to bytes for mapreduce functionality

--- a/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
+++ b/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
@@ -368,14 +368,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Adventure', (10000000.0, 1)),\n",
+       " ('Tools', (2900000.0, 1)),\n",
+       " ('Productivity', (3700000.0, 1)),\n",
+       " ('Communication', (1800000.0, 1)),\n",
+       " ('Tools', (6200000.0, 1)),\n",
+       " ('Social', (46000000.0, 1)),\n",
+       " ('Libraries & Demo', (2500000.0, 1)),\n",
+       " ('Lifestyle', (16000000.0, 1)),\n",
+       " ('Communication', (1300000.0, 1)),\n",
+       " ('Personalization', (3500000.0, 1)),\n",
+       " ('Racing', (51000000.0, 1)),\n",
+       " ('Maps & Navigation', (2700000.0, 1)),\n",
+       " ('Travel & Local', (7600000.0, 1)),\n",
+       " ('Maps & Navigation', (15000000.0, 1)),\n",
+       " ('Travel & Local', (29000000.0, 1)),\n",
+       " ('Food & Drink', (12000000.0, 1)),\n",
+       " ('Travel & Local', (2900000.0, 1)),\n",
+       " ('Tools', (2000000.0, 1)),\n",
+       " ('Lifestyle', (70000000.0, 1)),\n",
+       " ('Books & Reference', (11000000.0, 1)),\n",
+       " ('Social', (24000000.0, 1)),\n",
+       " ('Medical', (1400000.0, 1)),\n",
+       " ('Puzzle', (16000000.0, 1)),\n",
+       " ('Entertainment', (20000000.0, 1)),\n",
+       " ('Tools', (2400000.0, 1)),\n",
+       " ('Arcade', (25000000.0, 1)),\n",
+       " ('Arcade', (16000000.0, 1)),\n",
+       " ('Entertainment', (21000000.0, 1)),\n",
+       " ('Maps & Navigation', (11000000.0, 1)),\n",
+       " ('Auto & Vehicles', (6200000.0, 1)),\n",
+       " ('Lifestyle', (36000000.0, 1)),\n",
+       " ('Travel & Local', (7600000.0, 1)),\n",
+       " ('Photography', (6200000.0, 1)),\n",
+       " ('Entertainment', (6100000.0, 1)),\n",
+       " ('Maps & Navigation', (2600000.0, 1)),\n",
+       " ('Travel & Local', (11000000.0, 1)),\n",
+       " ('Health & Fitness', (3700000.0, 1)),\n",
+       " ('Education', (15000000.0, 1)),\n",
+       " ('Health & Fitness', (10000000.0, 1)),\n",
+       " ('Personalization', (8900000.0, 1)),\n",
+       " ('Shopping', (3900000.0, 1)),\n",
+       " ('Travel & Local', (30000000.0, 1)),\n",
+       " ('Personalization', (21000000.0, 1)),\n",
+       " ('Arcade', (26000000.0, 1)),\n",
+       " ('Tools', (4900000.0, 1)),\n",
+       " ('Tools', (4300000.0, 1)),\n",
+       " ('Board', (4800000.0, 1)),\n",
+       " ('Music & Audio', (4600000.0, 1)),\n",
+       " ('Books & Reference', (2800000.0, 1)),\n",
+       " ('Sports', (38000000.0, 1))]"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# avg_app_size= rdd.filter(lambda x:x!='')\\\n",
-    "#             .map(lambda x: (x.split(',')[2], x.split(',')[11]))\n",
+    "# size= 11, category= 2\n",
     "\n",
-    "# avg_app_size.take(500)"
+    "def convert_to_bytes(x):\n",
+    "    suffixes = {'G': 1000000000, 'M': 1000000, 'k': 1000}\n",
+    "    for suffix, multiplier in suffixes.items():\n",
+    "        if suffix in x:\n",
+    "            return float(x[:-1]) * multiplier\n",
+    "    return float(x)\n",
+    "\n",
+    "size_rdd= rdd.filter(lambda x: x.split(',')[11]!='Varies with device' and x.split(',')[11]!='')\\\n",
+    "            .map(lambda x: (x.split(',')[2], (convert_to_bytes(x.split(',')[11]),1 )))\\\n",
+    "            # .reduceByKey(lambda x,y: (x[0], x[1]+y[1]))\\\n",
+    "            # .mapValues(lambda x: x[0]/x[1])\\\n",
+    "            # .sortBy(lambda x: x[1], ascending=False)\n",
+    "\n",
+    "size_rdd.take(50)"
    ]
   },
   {
